# t3Math

./: .gitignore  CMakeLists.txt  README.md
t3Math/: t3MathSettings.h  t3Vector2.h  t3Vector2.inl  t3Vector3.h
t3Math/core/: t3Math.inl  t3MathSettings.h  t3Vector3.h
t3Math/test/: unitTest.h
test/: main.cpp  unitTest.h
